fixed status bubble wrapping

--- a/_sass/page-home.scss
+++ b/_sass/page-home.scss
@@ -1,25 +1,27 @@
 // Home
 
-.content-main h4 {
-    position: relative;
-}
-
-h4 .status {
-    position: relative;
-    top: -2px;
-    margin-left: 8px;
-
-    @include breakpoint(phablet) {
-        font-size: $smaller;
-        position: absolute;
-        top: 4px;
-        right: 0px;
-        margin-left: 0;
+header.case-studies {
     
+    margin: calc(2 * $section-padding) 0 $spacing 0;
+
+    h4 {       
+        display: inline-block;
+        margin-bottom: $text-spacing-half;
+
+        .status {
+            display: inline-block;
+            margin-left: 8px;
+
+            @include breakpoint(phablet) {
+                font-size: $smaller;
+            }
+
+            @include breakpoint(phone) {
+                margin: $text-spacing-half 0 0;
+            }
+        }
     }
 }
-
-
 .case-study-list {
     display: flex;
     flex-flow: row wrap;
